Alterações na index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Testando o commit no Master
+﻿<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <title>Teste do Git</title>
+</head>
+<body>
+    <p>Testando o commit no Master</p>
+	<p>Novo parágrafo</p>
+</body>
+</html>
