Revert "Novas alterações na index"
This reverts commit f9ebdd2617f96982ca2083301148979f9ee2d49a.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Teste do Git</title>
 </head>
 <body>
+    <p>Testando o commit no Master</p>
 	<p>Novo parágrafo</p>
 	<p>Outro parágrafo</p>
-	<p>Mais um parágrafo</p>
 </body>
 </html>
